# lala-search

./: .env.example  .env.prod.example  .env.test  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
.claude/: guidelines.md  settings.local.json
.github/workflows/: ci.yml  deploy.yml  e2e.yml  publish.yml
docker/cassandra/: schema.cql  schema_system.cql  schema_test.cql
docker/cassandra/migrations/: 001_add_storage_compression.cql  002_create_settings_table.cql
docker/postgres/: schema.sql
docker/scylla/: schema.cql
docker/seaweedfs/: s3.json
docs/: api.md  cassandra-to-postgres-analysis.md  claude-guidelines.md  crawl-pipeline.md  deployment.md  docker.md  lala-web-ssi-typescript.md  maintenance.md  multi-tenancy.md  overview.md  product-arch-draft.md  references.md  residuality-analysis-2026-01-18.md  version-endpoint-tdd.md  versioning.md  vm-metrics.md
infra/metrics/: .env.metrics.example  config.alloy  docker-compose.metrics.yml
lala-agent/: .dockerignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.prod  build.rs  clippy.toml
lala-agent/migrations/: 0001_initial.sql  0002_magic_link_send_attempts.sql  0003_magic_link_permanent_blocks.sql  0004_tenant_index_capacity.sql
lala-agent/src/: app.rs  lib.rs  main.rs
lala-agent/src/models/: action_history.rs  agent.rs  auth.rs  crawler.rs  db.rs  deployment.rs  domain.rs  mod.rs  onboarding.rs  queue.rs  search.rs  settings.rs  storage.rs  version.rs
lala-agent/src/routes/: auth.rs  mod.rs
lala-agent/src/services/: auth.rs  auth_db.rs  auth_middleware.rs  crawler.rs  db.rs  email.rs  logging.rs  mod.rs  queue_processor.rs  search.rs  storage.rs
lala-agent/templates/emails/: invitation.txt  magic_link.txt
lala-agent/tests/: crawler_integration_test.rs  migration_test.rs  queue_processor_integration_test.rs
lala-web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
lala-web/html/: index.html  styles.css
lala-web/html/dashboard/: index.html
lala-web/html/includes/: footer.html  head.html  header.html
lala-web/html/onboarding/: index.html
lala-web/html/signin/: index.html
lala-web/src/lib/: api.ts  search-input.ts
lala-web/src/pages/: dashboard.ts  onboarding.ts  search.ts  signin.ts
lala-web/src/types/: alpine.d.ts
lala-web/tests/: control-height.test.ts  onboarding-dashboard-search.test.js  search-input.test.ts  signin-onboarding-flow.test.js
nginx/: prod.conf
scripts/: cleanup_test_e2e_tenants.sql  deploy.sh  init-letsencrypt.sh  install-vm-metrics.sh  pre-commit.sh
tests/e2e/: .gitignore  README.md  conftest.py  mailpit.spec.ts  multi-tenant.spec.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  run_tests.sh  system.spec.ts  test_multi_tenant.py  test_system.py
tests/e2e/helpers/: api.ts  auth.ts  config.ts  inbox.ts  mailtrap.ts
