[package]
name = "lala-agent"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lints.clippy]
# Complexity lints (cognitive-complexity was removed, use these instead)
too_many_lines = "deny"
too_many_arguments = "deny"
type_complexity = "deny"
cognitive_complexity = "deny"

[dependencies]
anyhow = "1.0"
axum = "0.8.8"
chrono = "0.4.39"
futures = "0.3"
md5 = "0.7.0"
meilisearch-sdk = "0.29"
reqwest = { version = "0.13.1", default-features = false, features = ["native-tls", "http2"] }
scylla = { version = "0.15.1", features = ["chrono-04"] }  # Apache Cassandra driver (also works with ScyllaDB)
scylla-cql = "0.4.0"  # CQL types and utilities
scraper = "0.20"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
texting_robots = "0.2.2"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
url = "2.5.8"
