[package]
name = "lala-agent"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lints.clippy]
# Complexity lints (cognitive-complexity was removed, use these instead)
too_many_lines = "deny"
too_many_arguments = "deny"
type_complexity = "deny"
cognitive_complexity = "deny"

[dependencies]
anyhow = "1.0"
axum = "0.8.8"
chrono = "0.4.39"
futures = "0.3"
md5 = "0.7.0"
meilisearch-sdk = "0.29"
reqwest = { version = "0.13.1", default-features = false, features = ["native-tls", "http2"] }
scylla = { version = "0.15.1", features = ["chrono-04"] }  # Apache Cassandra driver (also works with ScyllaDB)
scylla-cql = "0.4.0"  # CQL types and utilities
scraper = "0.20"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
texting_robots = "0.2.2"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
url = "2.5.8"
rust-s3 = "0.35"
uuid = { version = "1.11", features = ["v7", "serde"] }
flate2 = "1.0"

# Authentication
tower-cookies = "0.11"                    # Cookie handling for Axum
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
rand = "0.8"                              # Token generation
sha2 = "0.10"                             # Token hashing
hex = "0.4"                               # Hex encoding for tokens

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
