[project]
name = "lalasearch-e2e"
version = "0.1.0"
description = "End-to-end tests for LalaSearch"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.2",
    "pytest>=7.4.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
